--- a/しりすこPAD.html
+++ b/しりすこPAD.html
@@ -500,7 +500,7 @@
             max-width: 1200px;
             margin: 0 auto;
             padding: 32px 16px;
-            padding-bottom: calc(80px + 32px); /* ボトムナビゲーション分のスペース */
+            padding-bottom: calc(50px + 16px); /* ボトムナビゲーション分のスペース (小さく調整) */
         }
 
         @media (min-width: 768px) {
@@ -1270,7 +1270,7 @@
         /* Compact devices (phones) - override for mobile */
         @media (max-width: 599px) {
             .container {
-                padding: 16px 12px calc(80px + 16px) 12px; /* ボトムナビゲーション分のスペース */
+                padding: 16px 12px calc(50px + 12px) 12px; /* ボトムナビゲーション分のスペース (小さく調整) */
             }
 
             .header h1 {
@@ -2263,17 +2263,19 @@ body {
     bottom: 0;
     left: 0;
     right: 0;
-    background: var(--md-sys-color-surface-container);
+    background: rgba(255, 255, 255, 0.95);
+    backdrop-filter: saturate(180%) blur(20px);
+    -webkit-backdrop-filter: saturate(180%) blur(20px);
     border-top: 1px solid var(--md-sys-color-outline-variant);
     display: flex;
     justify-content: space-around;
-    padding: 8px 0 max(8px, env(safe-area-inset-bottom));
+    padding: 2px 0 max(2px, env(safe-area-inset-bottom));
     z-index: 1000;
-    box-shadow: 0 -2px 8px rgba(0, 0, 0, 0.08);
+    box-shadow: 0 -1px 3px rgba(0, 0, 0, 0.04);
 }
 
 [data-theme="dark"] .tab-navigation {
-    background: var(--md-sys-color-surface-container);
+    background: rgba(28, 28, 30, 0.95);
     border-top-color: var(--md-sys-color-outline-variant);
 }
 
@@ -2304,23 +2306,23 @@ body {
 .tab-button {
     position: relative;
     flex: 1;
-    max-width: 120px;
-    min-width: 64px;
-    padding: 12px 8px 8px;
+    max-width: 80px;
+    min-width: 56px;
+    padding: 6px 4px 4px;
     background: transparent;
     border: none;
     color: var(--md-sys-color-on-surface-variant);
     font-family: 'Roboto', sans-serif;
     font-weight: 500;
-    font-size: 12px;
-    letter-spacing: 0.5px;
+    font-size: 10px;
+    letter-spacing: 0.4px;
     cursor: pointer;
     transition: color 200ms cubic-bezier(0.2, 0, 0, 1);
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 4px;
+    gap: 2px;
     overflow: hidden;
 }
 
@@ -2338,7 +2340,7 @@ body {
 }
 
 .tab-button span {
-    font-size: 24px;
+    font-size: 20px;
     display: block;
     transition: transform 200ms cubic-bezier(0.2, 0, 0, 1);
 }
@@ -2362,7 +2364,7 @@ body {
 }
 
 .tab-button.active span {
-    transform: scale(1.1);
+    transform: scale(1.05);
 }
 
 .tab-button.active::before {
