--- a/しりすこPAD.html
+++ b/しりすこPAD.html
@@ -500,7 +500,7 @@
             max-width: 1200px;
             margin: 0 auto;
             padding: 32px 16px;
-            padding-bottom: calc(50px + 16px); /* ボトムナビゲーション分のスペース (小さく調整) */
+            padding-bottom: calc(48px + 16px); /* ボトムナビゲーション分のスペース (アイコンのみ) */
         }
 
         @media (min-width: 768px) {
@@ -1270,7 +1270,7 @@
         /* Compact devices (phones) - override for mobile */
         @media (max-width: 599px) {
             .container {
-                padding: 16px 12px calc(50px + 12px) 12px; /* ボトムナビゲーション分のスペース (小さく調整) */
+                padding: 16px 12px calc(48px + 12px) 12px; /* ボトムナビゲーション分のスペース (アイコンのみ) */
             }
 
             .header h1 {
@@ -2269,7 +2269,7 @@ body {
     border-top: 1px solid var(--md-sys-color-outline-variant);
     display: flex;
     justify-content: space-around;
-    padding: 2px 0 max(2px, env(safe-area-inset-bottom));
+    padding: 0 0 max(0px, env(safe-area-inset-bottom));
     z-index: 1000;
     box-shadow: 0 -1px 3px rgba(0, 0, 0, 0.04);
 }
@@ -2302,45 +2302,26 @@ body {
     }
 }
 
-/* Bottom Navigation Button (Mobile) */
+/* Bottom Navigation Button (Mobile) - Icon Only */
 .tab-button {
     position: relative;
     flex: 1;
-    max-width: 80px;
-    min-width: 56px;
-    padding: 6px 4px 4px;
+    max-width: 64px;
+    min-width: 48px;
+    padding: 8px 4px;
     background: transparent;
     border: none;
     color: var(--md-sys-color-on-surface-variant);
-    font-family: 'Roboto', sans-serif;
-    font-weight: 500;
-    font-size: 10px;
-    letter-spacing: 0.4px;
     cursor: pointer;
     transition: color 200ms cubic-bezier(0.2, 0, 0, 1);
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 2px;
     overflow: hidden;
 }
 
-/* タブラベルの表示制御 */
-.tab-label {
-    display: block;
-}
-
-.tab-label-short {
-    display: inline; /* モバイルでは短縮版を表示 */
-}
-
-.tab-label-full {
-    display: none; /* モバイルでは完全版を非表示 */
-}
-
 .tab-button span {
-    font-size: 20px;
+    font-size: 24px;
     display: block;
     transition: transform 200ms cubic-bezier(0.2, 0, 0, 1);
 }
@@ -2381,19 +2362,14 @@ body {
     .tab-button {
         flex: 0 0 auto;
         max-width: none;
-        min-width: 90px;
-        padding: 16px 16px 14px;
-        flex-direction: row;
-        gap: 8px;
+        min-width: 64px;
+        padding: 12px 20px;
         border-bottom: 3px solid transparent;
-        font-size: 14px;
-        letter-spacing: 0.1px;
         transition: all 200ms cubic-bezier(0.2, 0, 0, 1);
-        white-space: nowrap;
     }
 
     .tab-button span {
-        font-size: 20px;
+        font-size: 24px;
         transform: none !important;
     }
 
@@ -2403,15 +2379,6 @@ body {
 
     .tab-button::before {
         border-radius: 0;
-    }
-
-    /* PC版ではフルラベルを表示 */
-    .tab-label-short {
-        display: none;
-    }
-
-    .tab-label-full {
-        display: inline;
     }
 }
 
@@ -2824,20 +2791,20 @@ table tr:hover {
 
         <!-- タブナビゲーション -->
         <div class="tab-navigation">
-            <button class="tab-button active" data-tab="ranking" onclick="switchTab('ranking')">
-                <span>📊</span> <span class="tab-label"><span class="tab-label-short">スコア</span><span class="tab-label-full">ダメージ基準</span></span>
+            <button class="tab-button active" data-tab="ranking" onclick="switchTab('ranking')" title="ダメージ基準スコア">
+                <span>📊</span>
             </button>
-            <button class="tab-button" data-tab="slv-ranking" onclick="switchTab('slv-ranking')">
-                <span>⚡</span> <span class="tab-label"><span class="tab-label-short">SLv</span><span class="tab-label-full">SLv基準</span></span>
+            <button class="tab-button" data-tab="slv-ranking" onclick="switchTab('slv-ranking')" title="SLv基準スコア">
+                <span>⚡</span>
             </button>
-            <button class="tab-button" data-tab="characters" onclick="switchTab('characters')">
-                <span>🎮</span> <span class="tab-label"><span class="tab-label-short">編成</span><span class="tab-label-full">NIKKE編成</span></span>
+            <button class="tab-button" data-tab="characters" onclick="switchTab('characters')" title="NIKKE編成">
+                <span>🎮</span>
             </button>
-            <button class="tab-button" data-tab="archive" onclick="switchTab('archive')">
-                <span>📂</span> <span class="tab-label"><span class="tab-label-short">履歴</span><span class="tab-label-full">過去データ</span></span>
+            <button class="tab-button" data-tab="archive" onclick="switchTab('archive')" title="過去データ">
+                <span>📂</span>
             </button>
-            <button class="tab-button" data-tab="management" onclick="switchTab('management')">
-                <span>⚙️</span> <span class="tab-label"><span class="tab-label-short">設定</span><span class="tab-label-full">データ管理</span></span>
+            <button class="tab-button" data-tab="management" onclick="switchTab('management')" title="データ管理">
+                <span>⚙️</span>
             </button>
         </div>
 
