--- a/しりすこPAD.html
+++ b/しりすこPAD.html
@@ -500,13 +500,6 @@
             max-width: 1200px;
             margin: 0 auto;
             padding: 32px 16px;
-            padding-bottom: calc(48px + 16px); /* ボトムナビゲーション分のスペース (アイコンのみ) */
-        }
-
-        @media (min-width: 768px) {
-            .container {
-                padding-bottom: 32px; /* PC版は通常のpadding */
-            }
         }
 
         /* Material Design 3 Top App Bar */
@@ -1270,7 +1263,7 @@
         /* Compact devices (phones) - override for mobile */
         @media (max-width: 599px) {
             .container {
-                padding: 16px 12px calc(48px + 12px) 12px; /* ボトムナビゲーション分のスペース (アイコンのみ) */
+                padding: 16px 12px;
             }
 
             .header h1 {
@@ -2257,128 +2250,239 @@ body {
     -moz-osx-font-smoothing: grayscale;
 }
 
-/* Material Design 3 Bottom Navigation (Mobile) / Top Tabs (Desktop) */
-.tab-navigation {
+/* ハンバーガーメニューボタン */
+.menu-button {
     position: fixed;
-    bottom: 0;
+    top: 16px;
+    left: 16px;
+    width: 48px;
+    height: 48px;
+    background: var(--md-sys-color-surface-container);
+    border: none;
+    border-radius: 24px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    z-index: 1100;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    transition: all 200ms cubic-bezier(0.2, 0, 0, 1);
+}
+
+.menu-button:hover {
+    background: var(--md-sys-color-secondary-container);
+}
+
+.menu-button svg {
+    width: 24px;
+    height: 24px;
+    stroke: var(--md-sys-color-on-surface);
+    stroke-width: 2;
+    stroke-linecap: round;
+}
+
+/* サイドドロワー */
+.drawer {
+    position: fixed;
+    top: 0;
+    left: -280px;
+    width: 280px;
+    height: 100%;
+    background: var(--md-sys-color-surface);
+    box-shadow: 2px 0 8px rgba(0, 0, 0, 0.15);
+    z-index: 1050;
+    transition: left 300ms cubic-bezier(0.4, 0, 0.2, 1);
+    overflow-y: auto;
+}
+
+.drawer.open {
+    left: 0;
+}
+
+[data-theme="dark"] .drawer {
+    background: var(--md-sys-color-surface);
+}
+
+/* ドロワーオーバーレイ */
+.drawer-overlay {
+    position: fixed;
+    top: 0;
     left: 0;
     right: 0;
-    background: rgba(255, 255, 255, 0.95);
-    backdrop-filter: saturate(180%) blur(20px);
-    -webkit-backdrop-filter: saturate(180%) blur(20px);
-    border-top: 1px solid var(--md-sys-color-outline-variant);
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 1040;
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.drawer-overlay.show {
+    opacity: 1;
+    pointer-events: all;
+}
+
+/* ドロワーヘッダー */
+.drawer-header {
+    padding: 24px 16px;
+    border-bottom: 1px solid var(--md-sys-color-outline-variant);
+}
+
+.drawer-header h2 {
+    margin: 0;
+    font-size: 20px;
+    color: var(--md-sys-color-on-surface);
+}
+
+/* ドロワーメニューアイテム */
+.drawer-menu {
+    padding: 8px 0;
+}
+
+.drawer-menu-item {
     display: flex;
-    justify-content: space-around;
-    padding: 0 0 max(0px, env(safe-area-inset-bottom));
-    z-index: 1000;
-    box-shadow: 0 -1px 3px rgba(0, 0, 0, 0.04);
+    align-items: center;
+    gap: 16px;
+    padding: 12px 16px;
+    background: transparent;
+    border: none;
+    width: 100%;
+    text-align: left;
+    color: var(--md-sys-color-on-surface);
+    font-size: 14px;
+    cursor: pointer;
+    transition: background 200ms cubic-bezier(0.2, 0, 0, 1);
 }
 
-[data-theme="dark"] .tab-navigation {
-    background: rgba(28, 28, 30, 0.95);
-    border-top-color: var(--md-sys-color-outline-variant);
+.drawer-menu-item:hover {
+    background: var(--md-sys-color-secondary-container);
 }
 
-/* PC版: 上部タブに変更 */
+.drawer-menu-item.active {
+    background: var(--md-sys-color-primary-container);
+    color: var(--md-sys-color-on-primary-container);
+}
+
+.drawer-menu-item span:first-child {
+    font-size: 24px;
+}
+
+/* ダークモード切り替えセクション */
+.drawer-section {
+    padding: 16px;
+    border-top: 1px solid var(--md-sys-color-outline-variant);
+}
+
+.drawer-section-title {
+    font-size: 12px;
+    font-weight: 500;
+    color: var(--md-sys-color-on-surface-variant);
+    margin-bottom: 8px;
+    text-transform: uppercase;
+    letter-spacing: 0.5px;
+}
+
+.theme-toggle {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 12px;
+    background: var(--md-sys-color-surface-container);
+    border-radius: 12px;
+}
+
+.theme-toggle-label {
+    display: flex;
+    align-items: center;
+    gap: 12px;
+    font-size: 14px;
+    color: var(--md-sys-color-on-surface);
+}
+
+.theme-toggle-switch {
+    position: relative;
+    width: 48px;
+    height: 28px;
+    background: var(--md-sys-color-outline);
+    border-radius: 14px;
+    cursor: pointer;
+    transition: background 200ms;
+}
+
+.theme-toggle-switch.active {
+    background: var(--md-sys-color-primary);
+}
+
+.theme-toggle-switch::after {
+    content: '';
+    position: absolute;
+    top: 2px;
+    left: 2px;
+    width: 24px;
+    height: 24px;
+    background: white;
+    border-radius: 50%;
+    transition: left 200ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.theme-toggle-switch.active::after {
+    left: 22px;
+}
+
+/* PC版: 上部タブ表示 */
 @media (min-width: 768px) {
+    .menu-button {
+        display: none;
+    }
+
     .tab-navigation {
         position: sticky;
         top: 60px;
-        bottom: auto;
-        border-top: none;
-        border-bottom: 1px solid var(--md-sys-color-outline-variant);
-        box-shadow: none;
         background: rgba(255, 255, 255, 0.8);
         backdrop-filter: saturate(180%) blur(20px);
         -webkit-backdrop-filter: saturate(180%) blur(20px);
+        border-bottom: 1px solid var(--md-sys-color-outline-variant);
         padding: 8px 0 0 0;
         margin-bottom: 32px;
+        display: flex;
+        justify-content: center;
         overflow-x: auto;
+        z-index: 100;
     }
 
     [data-theme="dark"] .tab-navigation {
         background: rgba(28, 28, 30, 0.8);
         border-bottom-color: var(--border);
     }
-}
 
-/* Bottom Navigation Button (Mobile) - Icon Only */
-.tab-button {
-    position: relative;
-    flex: 1;
-    max-width: 64px;
-    min-width: 48px;
-    padding: 8px 4px;
-    background: transparent;
-    border: none;
-    color: var(--md-sys-color-on-surface-variant);
-    cursor: pointer;
-    transition: color 200ms cubic-bezier(0.2, 0, 0, 1);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    overflow: hidden;
-}
-
-.tab-button span {
-    font-size: 24px;
-    display: block;
-    transition: transform 200ms cubic-bezier(0.2, 0, 0, 1);
-}
-
-.tab-button::before {
-    content: '';
-    position: absolute;
-    inset: 0;
-    background-color: var(--md-sys-color-on-surface);
-    opacity: 0;
-    transition: opacity 200ms cubic-bezier(0.2, 0, 0, 1);
-    border-radius: 16px;
-}
-
-.tab-button:hover::before {
-    opacity: 0.08;
-}
-
-.tab-button.active {
-    color: var(--md-sys-color-primary);
-}
-
-.tab-button.active span {
-    transform: scale(1.05);
-}
-
-.tab-button.active::before {
-    background-color: var(--md-sys-color-primary);
-    opacity: 0.12;
-}
-
-[data-theme="dark"] .tab-button.active {
-    color: var(--md-sys-color-primary);
-}
-
-/* PC版: 横並びタブスタイル */
-@media (min-width: 768px) {
     .tab-button {
         flex: 0 0 auto;
-        max-width: none;
-        min-width: 64px;
         padding: 12px 20px;
+        background: transparent;
+        border: none;
         border-bottom: 3px solid transparent;
+        color: var(--md-sys-color-on-surface-variant);
+        cursor: pointer;
         transition: all 200ms cubic-bezier(0.2, 0, 0, 1);
+        display: flex;
+        align-items: center;
+        gap: 8px;
     }
 
     .tab-button span {
         font-size: 24px;
-        transform: none !important;
     }
 
     .tab-button.active {
+        color: var(--md-sys-color-primary);
         border-bottom-color: var(--md-sys-color-primary);
     }
+}
 
-    .tab-button::before {
-        border-radius: 0;
+/* モバイル版: ボトムナビゲーション非表示 */
+@media (max-width: 767px) {
+    .tab-navigation {
+        display: none;
     }
 }
 
@@ -2501,6 +2605,59 @@ table tr:hover {
     </style>
 </head>
 <body>
+    <!-- ハンバーガーメニューボタン（モバイルのみ） -->
+    <button class="menu-button" onclick="toggleDrawer()" aria-label="メニューを開く">
+        <svg viewBox="0 0 24 24" fill="none">
+            <line x1="3" y1="6" x2="21" y2="6"></line>
+            <line x1="3" y1="12" x2="21" y2="12"></line>
+            <line x1="3" y1="18" x2="21" y2="18"></line>
+        </svg>
+    </button>
+
+    <!-- ドロワーオーバーレイ -->
+    <div class="drawer-overlay" onclick="closeDrawer()"></div>
+
+    <!-- サイドドロワー -->
+    <div class="drawer" id="drawer">
+        <div class="drawer-header">
+            <h2>🎮 しりすこPAD</h2>
+        </div>
+
+        <nav class="drawer-menu">
+            <button class="drawer-menu-item active" data-tab="ranking" onclick="switchTabFromDrawer('ranking')">
+                <span>📊</span>
+                <span>ダメージ基準スコア</span>
+            </button>
+            <button class="drawer-menu-item" data-tab="slv-ranking" onclick="switchTabFromDrawer('slv-ranking')">
+                <span>⚡</span>
+                <span>SLv基準スコア</span>
+            </button>
+            <button class="drawer-menu-item" data-tab="characters" onclick="switchTabFromDrawer('characters')">
+                <span>🎮</span>
+                <span>NIKKE編成</span>
+            </button>
+            <button class="drawer-menu-item" data-tab="archive" onclick="switchTabFromDrawer('archive')">
+                <span>📂</span>
+                <span>過去データ</span>
+            </button>
+            <button class="drawer-menu-item" data-tab="management" onclick="switchTabFromDrawer('management')">
+                <span>⚙️</span>
+                <span>データ管理</span>
+            </button>
+        </nav>
+
+        <div class="drawer-section">
+            <div class="drawer-section-title">テーマ</div>
+            <div class="theme-toggle" onclick="toggleThemeFromDrawer()">
+                <div class="theme-toggle-label">
+                    <span id="drawer-theme-icon">☀️</span>
+                    <span id="drawer-theme-label">ライトモード</span>
+                </div>
+                <div class="theme-toggle-switch" id="drawer-theme-switch"></div>
+            </div>
+        </div>
+    </div>
+
     <div class="container">
         <div class="header" style="background: transparent; position: relative; padding: 16px 24px; min-height: 180px;">
             <div style="position: absolute; top: 1rem; right: 1rem; z-index: 10;">
@@ -3796,6 +3953,58 @@ table tr:hover {
 // ===========================================
 // タブ切り替え機能 - Phase 1追加
 // ===========================================
+
+// ドロワーの開閉
+function toggleDrawer() {
+    const drawer = document.getElementById('drawer');
+    const overlay = document.querySelector('.drawer-overlay');
+    drawer.classList.toggle('open');
+    overlay.classList.toggle('show');
+}
+
+function closeDrawer() {
+    const drawer = document.getElementById('drawer');
+    const overlay = document.querySelector('.drawer-overlay');
+    drawer.classList.remove('open');
+    overlay.classList.remove('show');
+}
+
+// ドロワーからのタブ切り替え
+function switchTabFromDrawer(tabName) {
+    switchTab(tabName);
+    closeDrawer();
+
+    // ドロワーメニューのアクティブ状態を更新
+    document.querySelectorAll('.drawer-menu-item').forEach(item => {
+        item.classList.remove('active');
+    });
+    const activeItem = document.querySelector('.drawer-menu-item[data-tab="' + tabName + '"]');
+    if (activeItem) activeItem.classList.add('active');
+}
+
+// ドロワーからのテーマ切り替え
+function toggleThemeFromDrawer() {
+    const currentTheme = document.documentElement.getAttribute('data-theme') || 'light';
+    const newTheme = currentTheme === 'light' ? 'dark' : 'light';
+
+    document.documentElement.setAttribute('data-theme', newTheme);
+    localStorage.setItem('theme', newTheme);
+
+    // ドロワーのUI更新
+    const icon = document.getElementById('drawer-theme-icon');
+    const label = document.getElementById('drawer-theme-label');
+    const toggle = document.getElementById('drawer-theme-switch');
+
+    if (newTheme === 'dark') {
+        icon.textContent = '🌙';
+        label.textContent = 'ダークモード';
+        toggle.classList.add('active');
+    } else {
+        icon.textContent = '☀️';
+        label.textContent = 'ライトモード';
+        toggle.classList.remove('active');
+    }
+}
 
 function switchTab(tabName) {
     // ページトップにスクロール
@@ -6793,6 +7002,22 @@ ${processedData.map(p => `<tr><td>${p.rank}</td><td>${p.player}</td><td>${format
             // URL経由でのJSON自動読み込み
             autoLoadJSONFromURL();
             updateCurrentDataInfo(); // 現在表示中のデータ情報を更新
+
+            // ドロワーのテーマ表示を初期化
+            const currentTheme = document.documentElement.getAttribute('data-theme') || 'light';
+            const icon = document.getElementById('drawer-theme-icon');
+            const label = document.getElementById('drawer-theme-label');
+            const toggle = document.getElementById('drawer-theme-switch');
+
+            if (currentTheme === 'dark') {
+                icon.textContent = '🌙';
+                label.textContent = 'ダークモード';
+                toggle.classList.add('active');
+            } else {
+                icon.textContent = '☀️';
+                label.textContent = 'ライトモード';
+                toggle.classList.remove('active');
+            }
         });
 
         // URL経由でのJSON自動読み込み機能
