--- a/しりすこPAD.html
+++ b/しりすこPAD.html
@@ -885,7 +885,47 @@
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
             gap: 24px;
-            margin-bottom: 32px;
+            transition: all 300ms cubic-bezier(0.4, 0, 0.2, 1);
+        }
+
+        /* 統計カード折りたたみボタン */
+        .stats-toggle-btn {
+            width: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 12px;
+            padding: 14px 24px;
+            background: var(--md-sys-color-surface-container);
+            border: 1px solid var(--md-sys-color-outline-variant);
+            border-radius: 12px;
+            color: var(--md-sys-color-on-surface);
+            font-size: 14px;
+            font-weight: 500;
+            cursor: pointer;
+            transition: all 200ms cubic-bezier(0.2, 0, 0, 1);
+        }
+
+        .stats-toggle-btn:hover {
+            background: var(--md-sys-color-secondary-container);
+            border-color: var(--md-sys-color-outline);
+        }
+
+        .stats-toggle-btn:active {
+            transform: scale(0.98);
+        }
+
+        #stats-toggle-icon {
+            font-size: 20px;
+        }
+
+        #stats-toggle-arrow {
+            margin-left: auto;
+            transition: transform 300ms cubic-bezier(0.4, 0, 0.2, 1);
+        }
+
+        #stats-toggle-arrow.expanded {
+            transform: rotate(180deg);
         }
 
         /* Material Design 3 Stat Card (Filled Card) */
@@ -2966,7 +3006,15 @@ table tr:hover {
         <!-- タブ1コンテンツ: ランキング & パフォーマンス分析 -->
         <div id="tab-ranking" class="tab-content active">
         <div id="results" class="results">
-            <div id="statsGrid" class="stats-grid"></div>
+            <!-- 統計カード折りたたみ -->
+            <div style="margin-bottom: 24px;">
+                <button onclick="toggleStats()" class="stats-toggle-btn">
+                    <span id="stats-toggle-icon">📊</span>
+                    <span id="stats-toggle-text">統計を表示</span>
+                    <span id="stats-toggle-arrow">▼</span>
+                </button>
+                <div id="statsGrid" class="stats-grid" style="display: none; margin-top: 16px;"></div>
+            </div>
 
             <!-- グラフセクション -->
             <!-- 属性別積み上げ棒グラフ -->
@@ -3951,6 +3999,23 @@ table tr:hover {
 // ===========================================
 // タブ切り替え機能 - Phase 1追加
 // ===========================================
+
+// 統計カードの折りたたみ
+function toggleStats() {
+    const statsGrid = document.getElementById('statsGrid');
+    const arrow = document.getElementById('stats-toggle-arrow');
+    const text = document.getElementById('stats-toggle-text');
+
+    if (statsGrid.style.display === 'none') {
+        statsGrid.style.display = 'grid';
+        arrow.classList.add('expanded');
+        text.textContent = '統計を非表示';
+    } else {
+        statsGrid.style.display = 'none';
+        arrow.classList.remove('expanded');
+        text.textContent = '統計を表示';
+    }
+}
 
 // ドロワーの開閉
 function toggleDrawer() {
